--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 ---
 
 <Layout title="evanderle.ng">
 	<main>
 		<div class="container m-auto grid grid-cols-1 gap-3">
 			<div class="flex justify-center">
-				<h1 class="text-3xl px-2 py-5">evanderle.ng</h1>
+				<h1 class="text-3xl px-2 py-5">evаnderle.ng</h1>
 			</div>
 
 			<div class="bg-gray-100 p-3">
