--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,7 @@
 ---
 import NavButton from './NavButton.astro';
 ---
-<ul class="flex justify-between flex-wrap >
+<ul class="flex justify-between flex-wrap" >
 
 	<div class="flex">
 		<li>
