--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -2,9 +2,9 @@
 interface Props {
 	title: string;
 	info: string;
-	video: string;
-	link: string;
-	source: string;
+	video?: string;
+	link?: string;
+	source?: string;
 }
 const { title, info, video, link, source } = Astro.props;
 
